@@ -1,5 +1,6 @@
 0.6.1 [in progress]
 Rudimentary sky localization (no accented characters) for English, Spanish, French, and some Hawaiian sky labels (needs UI)
+Improved constellation art fade in/out (still need more art) and added atmosphere fade in/out
 Added planet orbits feature
 Added concept of sky cultures for different constellations (currently western and polynesian, needs UI)
 Added meteor showers (key 9)
